# UNBOUND

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  UI_ARCHITECTURE.md  USAGE.md  example-project.json  package-lock.json  package.json  tsconfig.desktop.json  tsconfig.json  tsconfig.preload.json  unbound.desktop  unbound.sh
examples/: sample-manuscript.txt  simple-story.txt
src/: AnalysisPanel.cpp  AnalysisPanel.hpp  CMakeLists.txt  LayoutPanel.cpp  LayoutPanel.hpp  MainWindow.cpp  MainWindow.hpp  PlanningPanel.cpp  PlanningPanel.hpp  RevisionPanel.cpp  RevisionPanel.hpp  StructurePanel.cpp  StructurePanel.hpp  UnboundApp.cpp  UnboundApp.hpp  WritingPanel.cpp  WritingPanel.hpp  demo.ts  index.ts  main.cpp  test.ts
src/__tests__/core/: documentManager.test.ts
src/__tests__/normalization/: textNormalizer.test.ts
src/__tests__/storage/: localStorage.test.ts
src/core/: documentManager.ts
src/core/ingestion/: index.ts  ingest.ts  ingestion.ts  normalize.ts  normalizer.ts  parser.ts
src/core/manuscript/: factory.ts  index.ts  model.ts  types.ts
src/demo/: example.txt  runDemo.ts
src/desktop/: main.ts  preload.ts
src/desktop/renderer/: index.html  renderer.ts  styles.css
src/model/: Chapter.cpp  Chapter.hpp  Project.cpp  Project.hpp
src/normalization/: textNormalizer.ts
src/storage/: localStorage.ts
src/tests/: demoAssertions.ts  runTests.ts
src/types/: content.ts  storage.ts
